trabajando en componente de formulario y notificacion

--- a/app/src/ui/layout/App.css
+++ b/app/src/ui/layout/App.css
@@ -16,7 +16,7 @@
     background: rgb(27, 184, 27);
 }
 .rojo {
-    background: red;
+    background: #ff0000;
 }
 /* .jm-logo-container {
     color: blue;
